# darktable

.ci/: appveyor.yml  azure-pipelines.yml  ci-script-build.sh  ci-script-windows.sh  ci-script-windows2.sh  ci-script.sh
cmake/: compiler-warnings.cmake
src/: CMakeLists.txt
src/common/: darktable.c  darktable.h  database.c  file_location.h
src/gui/: accelerators.c  accelerators.h  gtk.c  preferences.c
src/librarymgmt/: CMakeLists.txt  librarymgmt.glade  main.c  wnd_main.c  wnd_main.h
src/win/: dtwin.c
